--- a/weyl_group.tex
+++ b/weyl_group.tex
@@ -127,7 +127,7 @@ called the \textit{length} of the element $w$.
 
 We begin this subsection with a basic result about simple reflections.
 
-\begin{lemma}
+\begin{lemma}\label{lem:simplereflection}
     Let $\alpha_k\in\Delta\subset\Phi$ be a simple a root. Then $w_{\alpha_k}(\Phi^+\setminus\{\alpha_k\})=\Phi^+\setminus\{\alpha_k\}$.
 \end{lemma}
 
