--- a/main.tex
+++ b/main.tex
@@ -139,6 +139,10 @@
     \input{weyl_group.tex}
 
     \newpage
+    \section{Existence of Chevalley Basis}
+    \input{chevalley_basis.tex}
+
+    \newpage
     \section{Chevalley Groups: First Examples}
     \input{examples.tex}
 
