--- a/examples.tex
+++ b/examples.tex
@@ -1,4 +1,3 @@
-The study of the structure of Lie algebras and their representation theory is a central tool in the representation theory of groups of Lie type. This is a consequence of the fact that the algebraic structure Lie algebra encapsulates to a large extent the interplay between the algebraic and topological properties of the group. To understand how one side helps understand the other, it is essential to give explicit methods that allows us to construct groups of Lie type from a Lie algebra and vice-versa. The next few chapters describe a way to construct a family of groups of Lie type from a Lie algebra $\fg$, denoted as \textit{adjoint groups of Lie type}. These arise as subgroups of the group $\Aut(\fg)$ of Lie automorphisms of $\fg$ and are constructed using the adjoint representation $\ad:\fg\to\mathrm{gl}(\fg)$.
 
 This initial chapter presents explicitly three relatively simple examples with the aim to highlight and motivate some of the objects that appear in the general theory, which we will explain in later chapters. Before we start, however, we need a few general results on which the construction depend. 
 \begin{definition}
@@ -20,12 +19,12 @@ is an automorphism of $\fg$ as a Lie algebra.
     $$\exp(\delta)([xy])=\sum_{r=0}^{\infty}\frac{\delta^r}{r!}([xy])=\sum_{r=0}^{\infty}\sum_{\substack{i+j=r \\ i,j\geq 0}}\left[\frac{\delta^i}{i!}(x),\frac{\delta^{j}}{j!}(y)\right]=\left[\sum_{i=0}^\infty\frac{\delta^i}{i!}(x),\sum_{j=0}^{\infty}\frac{\delta^j}{j!}\right]=[\exp(\delta)(x),\exp(\delta)(y)],$$
     as desired.
 \end{proof}
-\begin{cor}\label{cor:xalpha_automorphism}
+\begin{cor}
     Let $\fg$ be a lie algebra over a field $K$ of characteristic $0$ and let $\alpha\in\Phi$ be a root of $\fg$. Then, for any $e_\alpha\in\fg_\alpha$ and $t\in K$, the map $x_\alpha(t):=\exp(\ad(te_\alpha))$ is an automorphism of $\fg$ as a Lie algebra.
 \end{cor}
 
 Finally, the following identities will be very helpful later on.
-\begin{lemma}\label{lem:conjxalpla}
+\begin{lemma}
     Let $\fg$ be a Lie algebra over a field $K$ and let $\phi\in\Aut(\fg)$ be an automorphism of $\fg$. Then
     $$\phi\circ\exp(\ad(te_\alpha))\circ\phi^{-1}=\exp(\ad(t\phi(e_\alpha)))$$
     for all $e_\alpha\in\fg_\alpha$ and $t\in K$.
